--- a/themes/lanyon-hugo/static/css/poole.css
+++ b/themes/lanyon-hugo/static/css/poole.css
@@ -35,6 +35,85 @@
  * Update the foundational and global aspects of the page.
  */
 
+
+/* playfair-display-regular - latin */
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/playfair-display-v14-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Playfair Display Regular'), local('PlayfairDisplay-Regular'),
+       url('/fonts/playfair-display-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/playfair-display-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/playfair-display-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/playfair-display-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/playfair-display-v14-latin-regular.svg#PlayfairDisplay') format('svg'); /* Legacy iOS */
+}
+
+
+
+/* libre-baskerville-regular - latin */
+@font-face {
+  font-family: 'Libre Baskerville';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/libre-baskerville-v6-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Libre Baskerville'), local('LibreBaskerville-Regular'),
+       url('/fonts/libre-baskerville-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/libre-baskerville-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/libre-baskerville-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/libre-baskerville-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/libre-baskerville-v6-latin-regular.svg#LibreBaskerville') format('svg'); /* Legacy iOS */
+}
+
+
+/* roboto-regular - latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/roboto-v19-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Roboto'), local('Roboto-Regular'),
+       url('/fonts/roboto-v19-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/roboto-v19-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/roboto-v19-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/roboto-v19-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/roboto-v19-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+
+
+/* montserrat-regular - latin */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/montserrat-v13-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Regular'), local('Montserrat-Regular'),
+       url('/fonts/montserrat-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/montserrat-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/montserrat-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/montserrat-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/montserrat-v13-latin-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+
+/* montserrat-italic - latin */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: italic;
+  font-weight: 400;
+  src: url('/fonts/montserrat-v13-latin-italic.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Italic'), local('Montserrat-Italic'),
+       url('/fonts/montserrat-v13-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/montserrat-v13-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/montserrat-v13-latin-italic.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/montserrat-v13-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/montserrat-v13-latin-italic.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+
+
+
+
+
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
@@ -48,7 +127,7 @@ body {
 }
 
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Playfair Display', serif;
   font-size: 16px;
   line-height: 1.5;
 }
