--- a/themes/lanyon-hugo/static/css/poole.css
+++ b/themes/lanyon-hugo/static/css/poole.css
@@ -160,7 +160,8 @@ a:focus {
 
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
-  margin-bottom: .5rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
   font-weight: bold;
   line-height: 1.25;
   color: #313131;
@@ -170,11 +171,9 @@ h1 {
   font-size: 2rem;
 }
 h2 {
-  margin-top: 1rem;
   font-size: 1.5rem;
 }
 h3 {
-  margin-top: 1.5rem;
   font-size: 1.25rem;
 }
 h4, h5, h6 {
