--- a/themes/lanyon-hugo/static/css/poole.css
+++ b/themes/lanyon-hugo/static/css/poole.css
@@ -127,7 +127,7 @@ body {
 }
 
 html {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -352,8 +352,9 @@ tbody tr:nth-child(odd) th {
 .message {
   margin-bottom: 1rem;
   padding: 1rem;
-  color: #717171;
+  color: #000000;
   background-color: #f9f9f9;
+  border-radius: 25px;
 }
 
 
