update main page

--- a/themes/lanyon-hugo/layouts/partials/sidebar.html
+++ b/themes/lanyon-hugo/layouts/partials/sidebar.html
@@ -5,7 +5,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>A guidebook to staying safe, secure, and private in the digital world. Made with <i class="far fa-heart"></i> by @increasingawareness</p>
+    <p>A guidebook to staying safe, secure, and private in the digital world. Made with <i class="far fa-heart"></i> by <a href="https://github.com/increasingawareness">@increasingawareness</a></p>
   </div>
 
   <nav class="sidebar-nav">
@@ -21,8 +21,13 @@
     <a class="sidebar-nav-item" href="#informed"><i class="fas fa-bullhorn"></i> Stay informed</a>
     <a class="sidebar-nav-item" href="#teamsport"><i class="far fa-handshake"></i> Privacy is a team sport</a>
     <a class="sidebar-nav-item" href="#othertools"> <i class="fas fa-tools"></i> Other tools</a>
-    <a class="sidebar-nav-item" href="#nextlevel"><i class="fas fa-laptop"></i> Next Level Steps</a>
     <a class="sidebar-nav-item" href="#faq"><i class="far fa-question-circle"></i> FAQ</a>
+    <a class="sidebar-nav-item" href="#nextlevel"><i class="fas fa-laptop"></i> Next Level Steps</a>
+    <a class="sidebar-nav-item" href="#about"><i class="fas fa-user"></i> About</a>
+    <a class="sidebar-nav-item" href="https://github.com/increasingawareness/digitalsafety.tips"><i class="fab fa-github"></i> Contribute</a>
+    <a class="sidebar-nav-item" href="#credits"><i class="fas fa-list"></i> Credits</a>
+
+
 
 
     {{ $thisperma := .Permalink }}
