--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -306,7 +306,7 @@ blockquote p:last-child {
 }
 
 img {
-  display: block;
+  display: inline;
   max-width: 100%;
   margin: 0 0 1rem;
   border-radius: 5px;
